vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.28.1-alpine
          ports:
            - name: http
              containerPort: 80
            - name: ws
              containerPort: 3012
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: data
      volumes:
        - name: data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/vaultwarden
