vaultwarden/ingress.http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: vaultwarden-redirect@kubernetescrd
spec:
  rules:
    - host: vaultwarden.lan
      http:
        paths:
          - path: /notifications/hub
            pathType: Exact
            backend:
              service:
                name: vaultwarden
                port:
                  name: ws
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
