vaultwarden/ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-https
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - vaultwarden.lan
      secretName: vaultwarden-tls
  rules:
    - host: vaultwarden.lan
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: vaultwarden
               port:
                 name: http
