vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/issuer: ca-issuer
  labels:
    app: vaultwarden
spec:
  tls:
    - hosts:
      - vaultwarden.lan
      secretName: vaultwarden-tls
  rules:
    - host: vaultwarden.lan
      http:
        paths:
         - path: Prefix
           backend:
             service:
               name: vaultwarden
               port:
                 name: http
